Fix some layout issues

--- a/src/MagickyBoardGames/wwwroot/css/site.css
+++ b/src/MagickyBoardGames/wwwroot/css/site.css
@@ -42,14 +42,14 @@ textarea {
 }
 
 /* Hide/rearrange for smaller screens */
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 767px) {
   /* Hide captions */
   .carousel-caption {
     display: none
   }
 }
 
-@media (min-width: 770px)
+@media (min-width: 768px)
 {
     .navbar-header
     {
